added services without pics

--- a/ambulatory.html
+++ b/ambulatory.html
@@ -200,16 +200,15 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
-                    <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
+                    <li class="active"><a href="./ambulatory.html">Ambulatory Transport</a></li>
                     <li><a href="./ldistance.html">Long Distance Transportation</a></li>
                     <li><a href="./bariatric.html">Bariatric Transportation</a></li>
 
@@ -251,15 +250,46 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>Ambulatory Transport</h2>
+            <h2>Ambulatory Transporation</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div><h2>AMBULATORY TRANSPORTATION SERVICES</h2></div>
+    <p></p>
+    <img src="./img/new-logo.png" alt="">
+    <div>Non-emergency ambulatory transportation services play a crucial role in ensuring the efficient and dependable transportation of individuals requiring medical assistance.</div>
+    <div>Our team of trained professionals and well-equipped vehicles, dedicated to ambulatory transportation services, ensures that individuals receive the essential care they need during their journey. Through door-to-door service, accommodation of medical equipment, and strict adherence to safety protocols, ambulatory transportation services prioritize the well-being and convenience of those in need.</div>
+    <div>For individuals who require assistance while walking, our ambulatory transportation services offer a solution for shopping, and other essential needs. We provide assistance in boarding and disembarking the vehicle and can also stand by or remain on-call as you attend to your responsibilities. </div>
+    <div style="height: 200px;">Ambulatory transportation utilizes passenger vehicles with minor modifications, and you have the flexibility to hire us for a single trip or by the hour. Your cost is calculated based on your starting and ending points, ensuring a tailored and cost-effective solution. </div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;" class="active"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="nem.html">Non-Emergency Medical Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Trips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -589,7 +619,6 @@ page when looking at its layout.</p>
               <a href="#"><span class="social_facebook"></span></a>
               <a href="#"><span class="social_twitter"></span></a>
               <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
             </div>
           </div>
         </div>
@@ -654,13 +683,14 @@ page when looking at its layout.</p>
                 <a href="#"><span class="social_facebook"></span></a>
                 <a href="#"><span class="social_twitter"></span></a>
                 <a href="#"><span class="social_linkedin"></span></a>
-                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
