--- a/bariatric.html
+++ b/bariatric.html
@@ -200,18 +200,17 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
                     <li><a href="./ldistance.html">Long Distance Transportation</a></li>
-                    <li><a href="./bariatric.html">Bariatric Transportation</a></li>
+                    <li class="active"><a href="./bariatric.html">Bariatric Transportation</a></li>
 
                   </ul>
                 </li>
@@ -258,8 +257,41 @@
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <img src="./img/new-logo.png" alt="">
+    <div>BrightStar Non-Medical Transportation stands at the forefront as a leading provider of bariatric transportation services. Our specialized bariatric wheelchair transportation services are meticulously crafted to guarantee the safe, comfortable, and convenient travel of individuals with unique needs, whether it's for short or long distances. We prioritize delivering exceptional patient care and go the extra mile to ensure the utmost comfort and safety for our people.</div>
+    <div>Our spacious and luxurious transport vehicles offer ample room for individuals, allowing them to stand comfortably inside. There's also sufficient seating for multiple individuals, and we wholeheartedly welcome the person's family and loved ones to accompany them on their journey. The core objective of our bariatric wheelchair transportation services is to ensure that individuals with special needs have reliable and accessible transportation options.</div>
+    <div style="height: 200px;">We provide our services for the following purposes: <br>
+      <li>Door-through-door services for individuals</li>
+      <li>Fully optimized transport are equipped with ramps and pulley systems</li>
+      <li>Up to date manual handling aids and equipment</li>
+      <li>Vehicles are designed to be environmentally friendly</li>
+      <li>Staff are actively engaged in maintaining their skills</li>
+    </div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Tips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;" class="active"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -589,7 +621,6 @@ page when looking at its layout.</p>
               <a href="#"><span class="social_facebook"></span></a>
               <a href="#"><span class="social_twitter"></span></a>
               <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
             </div>
           </div>
         </div>
@@ -654,13 +685,14 @@ page when looking at its layout.</p>
                 <a href="#"><span class="social_facebook"></span></a>
                 <a href="#"><span class="social_twitter"></span></a>
                 <a href="#"><span class="social_linkedin"></span></a>
-                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
