--- a/btb.html
+++ b/btb.html
@@ -200,13 +200,12 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
-                    <li><a href="./btb.html">Bed to Bed Transportation</a></li>
+                    <li class="active"><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
@@ -251,15 +250,42 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>Bed to Bed Transportation</h2>
+            <h2>Bed to Bed Transporation</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div style="text-align: center;"><h2>#1 BED TO BED TRANSPORTATION SERVICES IN SOUTH AND SOUTHWEST VIRGINIA</h2></div>
+    <div>Individuals facing mobility challenges due to illness or accidents and who are confined to their beds can take advantage of Non-Emergency Medical Transportation's bed-to-bed transportation service. These individuals are unable to bear weight on their legs or navigate stairs, making walking or climbing stairs impractical.</div>
+    <div>This is where BrightStar Non-Medical Transportation services step in. We are specifically designed to safely, comfortably, and independently transport these individuals up and down stairs using a variety of techniques. We employ high-quality, comfortable wheelchairs for our clients. Our team delivers the wheelchair directly to the client's bedside and assists them in transferring to the wheelchair using specialized medical techniques. Once we ensure everyone is securely positioned, we initiate the transportation process.</div>
+    <div style="height: 150px;">Our approach involves transporting the individual while seated safely in a wheelchair, allowing them to navigate stairs with ease. Upon reaching their destination, our driver will either wait for the individual or, in the case of longer visits, will coordinate transportation back to their residence by contacting you.</div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;" class="active"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Tips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -589,7 +615,6 @@ page when looking at its layout.</p>
               <a href="#"><span class="social_facebook"></span></a>
               <a href="#"><span class="social_twitter"></span></a>
               <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
             </div>
           </div>
         </div>
@@ -654,13 +679,14 @@ page when looking at its layout.</p>
                 <a href="#"><span class="social_facebook"></span></a>
                 <a href="#"><span class="social_twitter"></span></a>
                 <a href="#"><span class="social_linkedin"></span></a>
-              </div>
+                </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
