--- a/elderly.html
+++ b/elderly.html
@@ -200,13 +200,12 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
-                    <li><a href="./elderly.html">Elderly Transportation</a></li>
+                    <li class="active"><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
@@ -223,29 +222,6 @@
                 <li><a href="./discount.html">Discounts</a></li>
                 <li><a href="#">Service Areas</a>
                   <ul class="dropdown">
-                    <li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
-                    <li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
-                    <li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
-                    <li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
-                    <li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
-                    <li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
-                    <li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
-                    <li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
-                    <li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
-                    <li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
-                    <li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
-                    <li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
-                    <li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
-                    <li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
-                    <li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
-                    <li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
-                    <li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
-                    <li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
-                    <li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
-                    <li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
-                    <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
-                    <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
-                    <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
                     <li><a href="areas.html?areaName=Roanoke+Region">Roanoke Region</a></li>
                     <li><a href="areas.html?areaName=Christiansburg">Christiansburg</a></li>
                     <li><a href="areas.html?areaName=Lynchburg">Lynchburg</a></li>
@@ -281,8 +257,40 @@
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div style="text-align: center;"><h2>TRANSPORTATION FOR SENIORS</h2></div>
+    <div style="text-align: center;"><h2>(ELDERLY)</h2></div>
+    <div>Safe and convenient transportation options designed for elderly individuals requiring personal assistance while traveling</div>
+    <img src="./img/new-logo.png" alt="">
+    <div style="height: 200px;">We offer transportation services, including both wheelchair-accessible and standard options, to assist elderly residents in bot South and South-West Virginia. Our services cater to those who often face challenges when trying to access transportation for: <br>
+      <li>Routine medical appointments</li>
+      <li>Banking and other essential journeys</li>
+      <li>Shopping outings</li>
+    </div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;" class="active"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Tips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -684,7 +692,8 @@ page when looking at its layout.</p>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
