--- a/ldistance.html
+++ b/ldistance.html
@@ -200,17 +200,16 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
-                    <li><a href="./ldistance.html">Long Distance Transportation</a></li>
+                    <li class="active"><a href="./ldistance.html">Long Distance Transportation</a></li>
                     <li><a href="./bariatric.html">Bariatric Transportation</a></li>
 
                   </ul>
@@ -223,6 +222,29 @@
                 <li><a href="./discount.html">Discounts</a></li>
                 <li><a href="#">Service Areas</a>
                   <ul class="dropdown">
+                    <li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
+                    <li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
+                    <li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
+                    <li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
+                    <li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
+                    <li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
+                    <li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
+                    <li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
+                    <li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
+                    <li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
+                    <li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
+                    <li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
+                    <li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
+                    <li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
+                    <li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
+                    <li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
+                    <li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
+                    <li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
+                    <li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
+                    <li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
+                    <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
+                    <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
+                    <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
                     <li><a href="areas.html?areaName=Roanoke+Region">Roanoke Region</a></li>
                     <li><a href="areas.html?areaName=Christiansburg">Christiansburg</a></li>
                     <li><a href="areas.html?areaName=Lynchburg">Lynchburg</a></li>
@@ -251,15 +273,50 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>Long-Distance Transportation</h2>
+            <h2>Long Distance Transporation</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div><h2>LOOKING FOR RELIABLE LONG DISTANCE MEDICAL TRANSPORTATION?</h2></div>
+    <p></p>
+    <div><h4>WITH 5 YEARS OF EXPERIENCE, BRIGHTSTAR NON-MEDICAL TRANSPORTATION IS THE MOST AFFORDABLE TRANSPORT SERVICE FOR INDIVIDUALS THOSE WHO NEED ASSISTED LONG DISTANCE/STATE TO STATE TRANSPORT.</h4></div>
+    <p></p>
+    <div><h6>Why BrightStar Non-Medical Transportion for Long Distance?</h6></div>
+    <p></p>
+    <div>Our service is specifically designed for individuals who are unable to travel using conventional means due to some assisted travel requirements. BrightStar Non-Medical Transportation has especially built vans for:<br>
+      <li>Long-distance transportation (significant distances, typically between cities or states)</li>
+      <li>For non-medical needs.</li>
+    </div>
+    <div style="height: 200px;">Our team, comprised of experienced drivers and dedicated support staff, undergoes comprehensive training to offer specialized assistance to those in need during their journeys. Our unwavering commitment is to deliver a reliable, professional, and comfortable service to all our passengers.</div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="nem.html">Non-Emergency Medical Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Trips</a></div>
+  <div style="height: 40px;"class="active"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -589,7 +646,6 @@ page when looking at its layout.</p>
               <a href="#"><span class="social_facebook"></span></a>
               <a href="#"><span class="social_twitter"></span></a>
               <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
             </div>
           </div>
         </div>
@@ -654,13 +710,14 @@ page when looking at its layout.</p>
                 <a href="#"><span class="social_facebook"></span></a>
                 <a href="#"><span class="social_twitter"></span></a>
                 <a href="#"><span class="social_linkedin"></span></a>
-                 </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
