--- a/special.html
+++ b/special.html
@@ -200,15 +200,14 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
-                    <li><a href="./special.html">Special Tips</a></li>
+                    <li class="active"><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
                     <li><a href="./ldistance.html">Long Distance Transportation</a></li>
                     <li><a href="./bariatric.html">Bariatric Transportation</a></li>
@@ -251,15 +250,50 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>Special Tips</h2>
+            <h2>Special Trips</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div><h2>WOOW EVEN FOR THE SPECIAL TRIPS!!</h2></div>
+    <p></p>
+    <div style="height: 200px;">Are you in need of assistance for transportation during errands and various short or long-distance journeys? Our vehicles are specifically tailored to cater to assisted travel needs. You can rely on our vehicles for the following purposes:<br>
+      <li>Airport transfer (to and from)</li>
+      <li>Shopping & dining</li>
+      <li>Errands</li>
+      <li>Church Visits</li>
+      <li>Holidays/Recreational trips</li>
+      <li>To/from family gatherings (One way or round-trip)</li>
+      <li>Long/short Distance Assisted Transport</li>
+      <li>Same Day Appointments</li>
+    </div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;" class="active"><a href="special.html">Special Trips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -589,7 +623,6 @@ page when looking at its layout.</p>
               <a href="#"><span class="social_facebook"></span></a>
               <a href="#"><span class="social_twitter"></span></a>
               <a href="#"><span class="social_linkedin"></span></a>
-              <a href="#"><span class="social_pinterest"></span></a>
             </div>
           </div>
         </div>
@@ -654,13 +687,14 @@ page when looking at its layout.</p>
                 <a href="#"><span class="social_facebook"></span></a>
                 <a href="#"><span class="social_twitter"></span></a>
                 <a href="#"><span class="social_linkedin"></span></a>
-                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
