--- a/stretcher.html
+++ b/stretcher.html
@@ -200,13 +200,12 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
-                    <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Medical Transportation</a></li>
+                    <li class="active"><a href="./stretcher.html">Strecher Transport</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
@@ -251,15 +250,44 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>Stretcher Transport</h2>
+            <h2>Stretcher Transporation</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div style="text-align: center;"><h2>NUMBER ONE STRETCHER/GURNEY TRANSPORTATION SERVICE IN SOUTH AND SOUTHWEST VIRGINIA</h2></div>
+    <div><h4>WE ARE TOP RATED PROVIDERS OF AMBULATORY, STAIR LIFTER WHEELCHAIR, AND <span style="color: #FF8F00;">STRETCHER TRANSPORTATION</span></h4></div>
+    <img src="./img/new-logo.png" alt="">
+    <div>With over 5 years of experience, BrightStar Non-Medical Transportation specializes in non-emergency medical <span style="color: #0077B5;">stretcher transportation services</span>. Our services adhere to the highest industry standards, offering premier Non-Medical transportation solutions to the individuals. As a private non-emergency medical transportation company, we are dedicated to ensuring secure and punctual transportation for all our clients.</div>
+    <div>At BrightStar Non-Medical Transportation, our stretcher transport services are administered by skilled and experienced professionals who prioritize the safety and comfort of our clients. We are committed to deliver top-notch stretcher transportation services in your vicinity, including local, long-distance, and out-of-state options. For long-distance stretcher transportation, we provide a range of choices to guarantee the safe conveyance of your loved ones regardless of the distance.</div>
+    <div style="height: 150px;">Stretcher transportion involves the use of stretchers or gurneys for individuals who are unable to sit up or require enhanced medical attention during transit. BrightStar Non-Medical Transportation places the highest emphasis on service quality and safety to serve the best interests of all our customers.</div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;" class="active"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Tips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -661,7 +689,8 @@ page when looking at its layout.</p>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
