--- a/testimonials.html
+++ b/testimonials.html
@@ -195,7 +195,6 @@
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
                     <li><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
@@ -212,52 +211,6 @@
                 <li><a href="./discount.html">Discounts</a></li>
                 <li><a href="#">Service Areas</a>
                   <ul class="dropdown">
-                    <li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
-                    <li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
-                    <li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
-                    <li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
-                    <li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
-                    <li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
-                    <li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
-                    <li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
-                    <li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
-                    <li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
-                    <li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
-                    <li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
-                    <li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
-                    <li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
-                    <li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
-                    <li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
-                    <li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
-                    <li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
-                    <li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
-                    <li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
-                    <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
-                    <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
-                    <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
-                    <li><a href="areas.html?areaName=Ashburn+VA">Ashburn VA</a></li>
-                    <li><a href="areas.html?areaName=Dumfries+VA">Dumfries VA</a></li>
-                    <li><a href="areas.html?areaName=Fairfax+VA">Fairfax VA</a></li>
-                    <li><a href="areas.html?areaName=Herndon+VA">Herndon VA</a></li>
-                    <li><a href="areas.html?areaName=Leesburg+VA">Leesburg VA</a></li>
-                    <li><a href="areas.html?areaName=Manassas+VA">Manassas VA</a></li>
-                    <li><a href="areas.html?areaName=Sterling+VA">Sterling VA</a></li>
-                    <li><a href="areas.html?areaName=Alexandria+VA">Alexandria VA</a></li>
-                    <li><a href="areas.html?areaName=Annandale+VA">Annandale VA</a></li>
-                    <li><a href="areas.html?areaName=Arlington+VA">Arlington VA</a></li>
-                    <li><a href="areas.html?areaName=Bristow+VA">Bristow VA</a></li>
-                    <li><a href="areas.html?areaName=Burke+VA">Burke VA</a></li>
-                    <li><a href="areas.html?areaName=Centreville+VA">Centreville VA</a></li>
-                    <li><a href="areas.html?areaName=Chantilly+VA">Chantilly VA</a></li>
-                    <li><a href="areas.html?areaName=Falls+Church+VA">Falls Church VA</a></li>
-                    <li><a href="areas.html?areaName=Fredrickburg+VA">Fredrickburg VA</a></li>
-                    <li><a href="areas.html?areaName=Gainesville+VA">Gainesville VA</a></li>
-                    <li><a href="areas.html?areaName=Mc+Lean+VA">Mc Lean VA</a></li>
-                    <li><a href="areas.html?areaName=Reston+VA">Reston VA</a></li>
-                    <li><a href="areas.html?areaName=Springfield+VA">Springfield</a></li>
-                    <li><a href="areas.html?areaName=Stafford+VA">Stafford VA</a></li>
-                    <li><a href="areas.html?areaName=Vienna+VA">Vienna VA</a></li>
-                    <li><a href="areas.html?areaName=Woodbridge+VA">Woodbridge VA</a></li>
                     <li><a href="areas.html?areaName=Roanoke+Region">Roanoke Region</a></li>
                     <li><a href="areas.html?areaName=Christiansburg">Christiansburg</a></li>
                     <li><a href="areas.html?areaName=Lynchburg">Lynchburg</a></li>
@@ -271,7 +224,7 @@
                 </li>
                 <li><a href="./fleet.html">Our Fleet</a></li>
                 <li><a href="./career.html">Career</a></li>
-                <li><a href="./contact.html">Reserve Ride</a></li>
+                <li><a href="./contact.html">Reservation</a></li>
                 <!--<li><a href="#">Brochure</a></li>-->
               </ul>
             </nav>
