--- a/wheel.html
+++ b/wheel.html
@@ -200,14 +200,13 @@
             <nav class="header__menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li class="active"><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./services.html">Services</a>
                   <ul class="dropdown">
                     <li><a href="./elderly.html">Elderly Transportation</a></li>
                     <li><a href="./btb.html">Bed to Bed Transportation</a></li>
                     <li><a href="./stretcher.html">Strecher Transport</a></li>
-                    <li><a href="./nem.html">Non-Emergency Non-Medical Transportation</a></li>
-                    <li><a href="./wheel.html">Wheelchair Transportation</a></li>
+                    <li class="active"><a href="./wheel.html">Wheelchair Transportation</a></li>
                     <li><a href="./special.html">Special Tips</a></li>
                     <li><a href="./ambulatory.html">Ambulatory Transport</a></li>
                     <li><a href="./ldistance.html">Long Distance Transportation</a></li>
@@ -251,15 +250,53 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="breadcrumb__text">
-            <h2>WheelChair Transportation</h2>
+            <h2>Wheel Chair Transporation</h2>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+<div class="container" style="justify-content: center;">
+<div class="row" style="justify-content: center;">
+  <div class="col-lg-8">
+    <p></p>
+    <div style="text-align: center;"><h2>LOOKING FOR EXPERIENCED WHEELCHAIR TRANSPORTATION COMPANY NEAR YOU?</h2></div>
+    <div>People who require personalized transportation assistance, are wheelchair-bound, or have unique needs rely on our wheelchair transportation services. If they are bedridden or use a wheelchair, we offer support in safely navigating stairs. While we handle the logistical details, our clients can focus on what's most important to them.</div>
+    <img src="./img/new-logo.png" alt="">
+    <div style="height: 350px;">We provide our services for the purposes like:<br>
+      <li>Routine checkups</li>
+      <li>Hospital visits</li>
+      <li>Elderly transportation</li>
+      <li>Outpatient surgery</li>
+      <li>Dialysis</li>
+      <li>Hospital to home</li>  
+      <li>Nursing home</li>
+      <li>Home care</li>  
+      <li>Airport</li>
+      <li>Local errands appointments</li>
+    </div>
+  </div>
+  <div class="col-lg-4">
+  <p></p>
+  <div><h3>SERVICES WE OFFER</h3></div>
+  <p>-------------------------------</p>
+  <div style="height: 40px;" class="active"><a href="wheel.html">Wheelchair Transporation</a></div>
+  <div style="height: 40px;"><a href="ambulatory.html">Ambulatory Transporation</a></div>
+  <div style="height: 40px;"><a href="elderly.html">Elderly Transporation</a></div>
+  <div style="height: 40px;"><a href="btb.html">Bed to Bed Transporation</a></div>
+  <div style="height: 40px;"><a href="stretcher.html">Stretcher Transporation</a></div>
+  <div style="height: 40px;"><a href="special.html">Special Tips</a></div>
+  <div style="height: 40px;"><a href="ldistance.html">Long Distance Transporation</a></div>
+  <div style="height: 60px;"><a href="bariatric.html">Bariatric Transporation</a></div>
+  </div>  
+</div>
+</div>
 
-  <section class="about-company spad">
+
+
+
+  <!--<section class="about-company spad">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -654,13 +691,15 @@ page when looking at its layout.</p>
                 <a href="#"><span class="social_facebook"></span></a>
                 <a href="#"><span class="social_twitter"></span></a>
                 <a href="#"><span class="social_linkedin"></span></a>
-                </div>
+                <a href="#"><span class="social_pinterest"></span></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
+
 
 
   <div class="search-model">
